# ADAPT

./: .gitmodules  ARG's Dazzlingly Awesome Path Tracer (ADAPT).sln  CMakeLists.txt
ARG's Dazzlingly Awesome Path Tracer (ADAPT)/: ARG's Dazzlingly Awesome Path Tracer (ADAPT).vcxproj  ARG's Dazzlingly Awesome Path Tracer (ADAPT).vcxproj.filters  box.glb  cornell.glb  main.cpp  tiny_gltf.h
ARG's Dazzlingly Awesome Path Tracer (ADAPT)/shaders/: camera.glsl  common.glsl  comp.spv  compile.bat  disney.glsl  flim.glsl  frag.spv  hittable.glsl  random.glsl  ray.glsl  sampling.glsl  shader.comp  shader.frag  shader.vert  transformation.glsl  utils.glsl  vert.spv
src/: adapt.cpp  adapt.hpp  main.cpp
src/compiled shaders/: comp.spv  frag.spv  vert.spv
src/shaders/: comp.comp  frag.frag  vert.vert
